-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 10
-
Component/s: hotspot
-
b21
A jprt run of jdk10/hs sources gave the following crash:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../s/hotspot/src/share/vm/ci/ciInstanceKlass.cpp:51), pid=10748, tid=35
# assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded
Stack trace:Current CompileTask:
C1: 8498 1471 2 com.sun.tools.javac.code.TypeAnnotations$TypeAnnotationPositions::visitVarDef (296 bytes)
Stack: [0xffff80ff78ef9000,0xffff80ff78ff9000], sp=0xffff80ff78ff6810, free space=1014k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x24682c3] void VMError::report_and_die(int,const char*,const char*,__va_list_element*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long)+0x9e3
V [libjvm.so+0x2467872] void VMError::report_and_die(Thread*,const char*,int,const char*,const char*,__va_list_element*)+0x42
V [libjvm.so+0x15292e9] void report_vm_error(const char*,int,const char*,const char*,...)+0xf9
V [libjvm.so+0x12ed017] ciInstanceKlass::ciInstanceKlass(Klass*)+0x1b7
V [libjvm.so+0x1318a9a] ciMetadata*ciObjectFactory::create_new_metadata(Metadata*)+0x42a
V [libjvm.so+0x131788a] ciMetadata*ciObjectFactory::get_metadata(Metadata*)+0x39a
V [libjvm.so+0x12e27cb] ciKlass*ciEnv::get_klass_by_name_impl(ciKlass*,const constantPoolHandle&,ciSymbol*,bool)+0x88b
V [libjvm.so+0x132c240] ciSignature::ciSignature #Nvariant 1(ciKlass*,const constantPoolHandle&,ciSymbol*)+0x2c0
V [libjvm.so+0x12f8573] ciMethod::ciMethod(methodHandle,ciInstanceKlass*)+0x563
V [libjvm.so+0x131898f] ciMetadata*ciObjectFactory::create_new_metadata(Metadata*)+0x31f
V [libjvm.so+0x131788a] ciMetadata*ciObjectFactory::get_metadata(Metadata*)+0x39a
V [libjvm.so+0x12e404d] ciMethod*ciEnv::get_method_by_index_impl(const constantPoolHandle&,int,Bytecodes::Code,ciInstanceKlass*)+0x22d
V [libjvm.so+0x12e43a3] ciMethod*ciEnv::get_method_by_index(const constantPoolHandle&,int,Bytecodes::Code,ciInstanceKlass*)+0x143
V [libjvm.so+0x1330775] ciMethod*ciBytecodeStream::get_method(bool&,ciSignature**)+0x155
V [libjvm.so+0x1179015] void GraphBuilder::invoke(Bytecodes::Code)+0x35
V [libjvm.so+0x117fd29] BlockEnd*GraphBuilder::iterate_bytecodes_for_block(int)+0xb09
V [libjvm.so+0x1182e38] void GraphBuilder::iterate_all_blocks(bool)+0x108
V [libjvm.so+0x118750a] GraphBuilder::GraphBuilder(Compilation*,IRScope*)+0x78a
V [libjvm.so+0x1199090] BlockBegin*IRScope::build_graph(Compilation*,int)+0x20
V [libjvm.so+0x11992b2] IRScope::IRScope #Nvariant 1(Compilation*,IRScope*,int,ciMethod*,int,bool)+0x1d2
V [libjvm.so+0x1199ae8] IR::IR(Compilation*,ciMethod*,int)+0x88
V [libjvm.so+0x115abe7] void Compilation::build_hir()+0x1b7
V [libjvm.so+0x115c162] int Compilation::compile_java_method()+0x1f2
V [libjvm.so+0x115caa9] void Compilation::compile_method()+0x259
V [libjvm.so+0x115db4a] Compilation::Compilation #Nvariant 1(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*,DirectiveSet*)+0x37a
V [libjvm.so+0x116146e] void Compiler::compile_method(ciEnv*,ciMethod*,int,DirectiveSet*)+0x28e
V [libjvm.so+0x14a10ac] void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x7dc
V [libjvm.so+0x14a0051] void CompileBroker::compiler_thread_loop()+0x271
V [libjvm.so+0x23b2990] void JavaThread::thread_main_inner()+0x250
V [libjvm.so+0x23b2712] void JavaThread::run()+0x3f2
V [libjvm.so+0x2118b68] thread_native_entry+0x168
C [libc.so.1+0x125221] _thrp_setup+0xa5
C [libc.so.1+0x1254c0] _lwp_start+0x0
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../s/hotspot/src/share/vm/ci/ciInstanceKlass.cpp:51), pid=10748, tid=35
# assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded
Stack trace:Current CompileTask:
C1: 8498 1471 2 com.sun.tools.javac.code.TypeAnnotations$TypeAnnotationPositions::visitVarDef (296 bytes)
Stack: [0xffff80ff78ef9000,0xffff80ff78ff9000], sp=0xffff80ff78ff6810, free space=1014k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x24682c3] void VMError::report_and_die(int,const char*,const char*,__va_list_element*,Thread*,unsigned char*,void*,void*,const char*,int,unsigned long)+0x9e3
V [libjvm.so+0x2467872] void VMError::report_and_die(Thread*,const char*,int,const char*,const char*,__va_list_element*)+0x42
V [libjvm.so+0x15292e9] void report_vm_error(const char*,int,const char*,const char*,...)+0xf9
V [libjvm.so+0x12ed017] ciInstanceKlass::ciInstanceKlass(Klass*)+0x1b7
V [libjvm.so+0x1318a9a] ciMetadata*ciObjectFactory::create_new_metadata(Metadata*)+0x42a
V [libjvm.so+0x131788a] ciMetadata*ciObjectFactory::get_metadata(Metadata*)+0x39a
V [libjvm.so+0x12e27cb] ciKlass*ciEnv::get_klass_by_name_impl(ciKlass*,const constantPoolHandle&,ciSymbol*,bool)+0x88b
V [libjvm.so+0x132c240] ciSignature::ciSignature #Nvariant 1(ciKlass*,const constantPoolHandle&,ciSymbol*)+0x2c0
V [libjvm.so+0x12f8573] ciMethod::ciMethod(methodHandle,ciInstanceKlass*)+0x563
V [libjvm.so+0x131898f] ciMetadata*ciObjectFactory::create_new_metadata(Metadata*)+0x31f
V [libjvm.so+0x131788a] ciMetadata*ciObjectFactory::get_metadata(Metadata*)+0x39a
V [libjvm.so+0x12e404d] ciMethod*ciEnv::get_method_by_index_impl(const constantPoolHandle&,int,Bytecodes::Code,ciInstanceKlass*)+0x22d
V [libjvm.so+0x12e43a3] ciMethod*ciEnv::get_method_by_index(const constantPoolHandle&,int,Bytecodes::Code,ciInstanceKlass*)+0x143
V [libjvm.so+0x1330775] ciMethod*ciBytecodeStream::get_method(bool&,ciSignature**)+0x155
V [libjvm.so+0x1179015] void GraphBuilder::invoke(Bytecodes::Code)+0x35
V [libjvm.so+0x117fd29] BlockEnd*GraphBuilder::iterate_bytecodes_for_block(int)+0xb09
V [libjvm.so+0x1182e38] void GraphBuilder::iterate_all_blocks(bool)+0x108
V [libjvm.so+0x118750a] GraphBuilder::GraphBuilder(Compilation*,IRScope*)+0x78a
V [libjvm.so+0x1199090] BlockBegin*IRScope::build_graph(Compilation*,int)+0x20
V [libjvm.so+0x11992b2] IRScope::IRScope #Nvariant 1(Compilation*,IRScope*,int,ciMethod*,int,bool)+0x1d2
V [libjvm.so+0x1199ae8] IR::IR(Compilation*,ciMethod*,int)+0x88
V [libjvm.so+0x115abe7] void Compilation::build_hir()+0x1b7
V [libjvm.so+0x115c162] int Compilation::compile_java_method()+0x1f2
V [libjvm.so+0x115caa9] void Compilation::compile_method()+0x259
V [libjvm.so+0x115db4a] Compilation::Compilation #Nvariant 1(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*,DirectiveSet*)+0x37a
V [libjvm.so+0x116146e] void Compiler::compile_method(ciEnv*,ciMethod*,int,DirectiveSet*)+0x28e
V [libjvm.so+0x14a10ac] void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x7dc
V [libjvm.so+0x14a0051] void CompileBroker::compiler_thread_loop()+0x271
V [libjvm.so+0x23b2990] void JavaThread::thread_main_inner()+0x250
V [libjvm.so+0x23b2712] void JavaThread::run()+0x3f2
V [libjvm.so+0x2118b68] thread_native_entry+0x168
C [libc.so.1+0x125221] _thrp_setup+0xa5
C [libc.so.1+0x1254c0] _lwp_start+0x0
- relates to
-
JDK-8176705 Remove static functions in InstanceKlass
-
- Resolved
-
-
JDK-8182720 In InstanceKlass.cpp, get init_lock from handle
-
- Resolved
-
-
JDK-8207924 serviceability/sa/TestUniverse.java#id0 intermittently fails with assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded
-
- Closed
-