8178107: Compiler crashes with "assert(get_instanceKlass()->is_loaded()) failed: must be at least loaded"

Add missing '!' operator to weed out unloaded classes

Reviewed-by: coleenp, dcubed